ADD / UPDATE : Refactorizaciones, controller v2 guia despachos